# ChatGPT-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml  rust.yml  test.yml
src/: client.rs  error.rs  fetch_sse.rs  main.rs
src/api/: chat.rs  complete.rs  mod.rs  models.rs  text.rs
src/ui/: chat_list.rs  chat_window.rs  complete_window.rs  list_view.rs  logger.rs  mod.rs  model_table.rs  parameter_control.rs  session_list.rs
src/ui/easy_mark/: easy_mark_highlighter.rs  easy_mark_parser.rs  easy_mark_viewer.rs  mod.rs  syntax_highlighting.rs
