[package]
name = "chatgpt-rs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
hyper-proxy = "0.9.1"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"
eframe = "0.21"
tracing-subscriber = "0.3"
log = "0.4"
anyhow = "1.0.69"
thiserror = "1.0.39"
egui_extras = { version = "0.21.0", features = ["image"] }
image = { version = "0.24", features = ["jpeg", "png"] }
validator = { version = "0.16.0", features = ["derive"] }
futures = "0.3.27"
egui-notify = "0.6.0"
