[package]
name = "chatgpt-rs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
opt-level = "z"

[dependencies]
eframe = { version = "0.21", default-features = false, features = [
    "glow",
    "accesskit",
    "dark-light",
] }
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5", features = ["vendored"] }
hyper-proxy = "0.9.1"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.69"
thiserror = "1.0.39"
egui_extras = { version = "0.21.0", features = ["image", "tracing"] }
image = { version = "0.24", features = ["jpeg", "png"] }
validator = { version = "0.16.0", features = ["derive"] }
futures = "0.3.27"
egui-notify = "0.6.0"
tracing = { version = "0.1.37" }
egui_logger = "0.3.0"
regex = "1.7.1"
strum = { version = "0.24.1", features = ["derive"] }
poll-promise = { version = "0.2.0", features = ["tokio"] }
font-kit = "0.11.0"
